code25_all/scala/3241254.txt
def foo(args: Array[String]) =
  for (arg <- args) println(arg)

def bar(args: String*) = foo(args)

<console>:5: error: type mismatch;
 found   : String*
 required: Array[String]
       def bar(args: String*) = foo(args)
                                ^

args
bar
Array[String]
